--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -71,8 +71,8 @@ a{
     }   
 }
 
-@media screen and (orientation: landscape) {
+/* @media screen and (orientation: landscape) {
     .nav{
         top: 80%;
     }
-}
+} */
